<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginTop="75sp"
    android:background="#290649"
    android:layout_marginBottom="75sp"

  >

        <TextView

            android:background="#F8A3C0"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name_view"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/Name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_below="@id/name"
            android:autofillHints="Name"
            android:layout_marginTop="3dp"
            android:hint="@string/name"
            android:textSize="20sp"
            android:background="@drawable/ripple_effect_buttons"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:paddingTop="3dp"
           />


         <TextView
             android:id="@+id/email"
             android:layout_marginVertical="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textSize="25sp"
             android:background="#F8A3C0"
             android:text="@string/Email_view"
             android:textColor="@color/colorBlack"
             android:layout_below="@id/Name_text"/>

            <EditText
                android:id="@+id/Email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:textSize="20sp"
                android:background="@drawable/ripple_effect_buttons"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:autofillHints="@string/Email_view"
                android:textColor="@color/colorBlack"
             />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginVertical="20dp"
                   android:id="@+id/password"
                    android:textSize="25sp"
                    android:background="#F8A3C0"
                    android:text="@string/Password_view"
                    android:textColor="@color/colorBlack"
                    android:autofillHints="@string/Password_view"
                    android:layout_below="@id/Email_text"/>

                <EditText
                    android:id="@+id/password_Text"
                    android:hint="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/ripple_effect_buttons"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"

                    android:autofillHints="@string/password" />
            
    <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="90sp"
            android:layout_marginTop="340dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorBlack"
            android:text="@string/Sign_view"
            android:background="@drawable/ripple_effect_buttons"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250sp"
            android:layout_marginTop="340dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="30sp"
            android:text="@string/log_view"
            android:textColor="@color/colorBlack"
             android:background="@drawable/ripple_effect_buttons"
            android:textSize="15sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginStart="110sp"
        android:text="@string/Account_view"
        android:textColor="@color/colorWhite"
         android:layout_marginTop="310dp"
        android:textSize="18sp"/>
</RelativeLayout>
